# slox

./: Cargo.toml  README.md  build.rs
crates/slox-bootstrap/src/: main.rs
crates/slox-cli/: Cargo.toml
crates/slox-cli/src/: lib.rs
crates/slox-core/: Cargo.toml
crates/slox-core/src/: activate.rs  env.rs  lib.rs  package.rs  store.rs  term.rs
crates/slox-shim/: Cargo.toml
crates/slox-shim/src/: lib.rs
src/: lib.rs  main.rs
