[workspace]
members = [
    "crates/slox-cli",
    "crates/slox-core",
    "crates/slox-shim",
]
resolver = "3"

[workspace.package]
version = "1.0.0"
edition = "2024"
license = "LGPL-3.0-only"
description = "Package Manager written in rust"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
git2 = "0.20.4"
home = "0.5.12"
toml = "1.1.2"

[package]
name = "slox"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
build = "build.rs"

[[bin]]
name = "slox"
path = "crates/slox-bootstrap/src/main.rs"

[dependencies]
clap.workspace = true
slox-cli = { version = "0.3.0", path = "crates/slox-cli" }
slox-core = { version = "0.3.0", path = "crates/slox-core" }
